# ortisan_ta

./: .gitignore  .pylintrc  README.md  __init__.py  mypy.ini  pyproject.toml  pyrightconfig.json  setup.py
notebooks/: Analysis.ipynb  BackTesting.ipynb  Candlesticks Example.ipynb  Distribution.ipynb  Saving Dataset Example.ipynb  Trends-MiniIndex.ipynb  Trends.ipynb
notebooks/datasets/: AAPL.csv
ortisan_ta/: analysis.py  candlestick.py  constants.py  dataaccess.py  graphs.py  simulator.py  statistics.py  strategy.py
ortisan_ta/dates/: dates.py
ortisan_ta/graphs/: graphs.py
ortisan_ta/indicators/: average.py  candle.py  channels.py  cross.py  momentum.py  noise.py  risk_control.py  utils.py  volatility.py  volume.py
ortisan_ta/statistics/: statistics.py
ortisan_ta/util/: date.py
ortisan_ta/utils/: __init__.py  analysis.py  date.py  file.py  graphs.py  image.py  statistics.py  strategies.py
tests/: test_candlestick.py  test_date.py  test_indicators.py  test_statistics.py
