[tool.poetry]
name = "ortisan_ta"
version = "0.1.0"
description="This package contains a trade analytic tools."
authors = ["Marcelo Ortiz de Santana <tentativafc@gmail.com>"]
readme = "README.md"
repository = "https://github.com/ortisan/ortisan_ta"
homepage = "https://github.com/ortisan/ortisan_ta"
classifiers=[
    "Programming Language :: Python :: 3",
    "License :: MIT License",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.19"
pandas = "^1.1"
scikit-learn = "^0.22"
statsmodels = "^0.13.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
coverage = {extras = ["toml"], version = "^6.3.2"}
jupyter = "^1.0.0"
plotly = "^5.7.0"
seaborn = "^0.11.2"
pandas-datareader = "^0.10.0"
matplotlib = "^3.5.1"
pyright = "^1.1.237"
flake8 = "^4.0.1"
autopep8 = "^1.6.0"
chart-studio = "^1.1.0"
pylint = "^2.13.5"
tox = "^3.25.0"
isort = "^5.10.1"
black = "^22.3.0"
flake8-bandit = "^3.0.0"
flake8-docstrings = "^1.6.0"
flake8-bugbear = "^22.3.23"
mypy = "^0.942"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
