[tool.poetry]
name = "ortisan_ta"
version = "0.1.0"
description="This package contains a trade analytic tools."
authors = ["Marcelo Ortiz de Santana <tentativafc@gmail.com>"]
readme = "README.md"
repository = "https://github.com/ortisan/ortisan_ta"
homepage = "https://github.com/ortisan/ortisan_ta"
classifiers=[
    "Programming Language :: Python :: 3",
    "License :: MIT License",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
ta-lib = "^0.4.28"
pandas = "^2.1.1"
backtrader = "^1.9.78.123"
scikit-learn = "^1.3.1"
requests = "^2.31.0"
backtrader-plotly = "^1.5.0"
seaborn = "^0.13.0"
matplotlib = "^3.8.0"
plotly = "^5.17.0"
tensorflow = "^2.14.0"
numpy = "^1.26.1"
scipy = "^1.11.3"
statsmodels = "^0.14.0"
mplfinance = "^0.12.10b0"
coverage = "^7.3.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
mypy = "^1.6.1"
pyright = "^1.1.333"
flake8 = "^6.1.0"
autopep8 = "^2.0.4"
pylint = "^3.0.2"
tox = "^4.11.3"
isort = "^5.12.0"
black = "^23.10.1"
flake8-bandit = "^4.1.1"
flake8-docstrings = "^1.7.0"
flake8-bugbear = "^23.9.16"
jupyter = "^1.0.0"
autoflake = "^2.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
